[package]
name = "lunaris-server"
version = "0.1.0"
edition = "2024"

[dependencies]
lunaris-common = { path = "../common" }
sqlparser = "0.55"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
crc32fast = "1"
